# skype_farsight2

./: configure.ac  farsight2.pc.in
docs/libs/: farsight2-libs-docs.sgml  farsight2-libs-sections.txt  farsight2-libs.types
docs/plugins/: Makefile.am  farsight2-plugins-docs.sgml  farsight2-plugins-sections.txt
examples/: Makefile.am
examples/filter-manager/: Makefile.am  grid-effects.c  grid-effects2.c  test-level.c  test-video-filters.c
examples/fsu/: Makefile.am  test-probe.c  test-sink.c  test-source.c
gst-libs/gst/: Makefile.am
gst-libs/gst/farsight/: Makefile.am  fsu-audioconverter-filter.c  fsu-audioconverter-filter.h  fsu-common.c  fsu-common.h  fsu-conference.c  fsu-conference.h  fsu-effectv-filter.c  fsu-effectv-filter.h  fsu-filter-helper.c  fsu-filter-helper.h  fsu-filter-manager.c  fsu-filter-manager.h  fsu-filter.c  fsu-filter.h  fsu-framerate-filter.c  fsu-framerate-filter.h  fsu-gnome-effect-filter.c  fsu-gnome-effect-filter.h  fsu-level-filter.c  fsu-level-filter.h  fsu-multi-filter-manager.c  fsu-multi-filter-manager.h  fsu-preview-filter.c  fsu-preview-filter.h  fsu-probe.c  fsu-probe.h  fsu-resolution-filter.c  fsu-resolution-filter.h  fsu-session-priv.h  fsu-session.c  fsu-session.h  fsu-single-filter-manager.c  fsu-single-filter-manager.h  fsu-sink-class.h  fsu-sink.c  fsu-sink.h  fsu-source-class.h  fsu-source.c  fsu-source.h  (+7 more)
gst-libs/gst/filters/: Makefile.am  fsu-audioconverter-filter.c  fsu-audioconverter-filter.h  fsu-bin-filter.c  fsu-bin-filter.h  fsu-filter-helper.c  fsu-filter-helper.h  fsu-filter-manager.c  fsu-filter-manager.h  fsu-filter.c  fsu-framerate-filter.c  fsu-framerate-filter.h  fsu-gnome-effect-filter.c  fsu-gnome-effect-filter.h  fsu-level-filter.c  fsu-level-filter.h  fsu-maxframerate-filter.c  fsu-maxframerate-filter.h  fsu-multi-filter-manager.c  fsu-multi-filter-manager.h  fsu-preview-filter.c  fsu-preview-filter.h  fsu-resolution-filter.c  fsu-resolution-filter.h  fsu-single-filter-manager.c  fsu-single-filter-manager.h  fsu-videoconverter-filter.c  fsu-videoconverter-filter.h  fsu-volume-filter.c  fsu-volume-filter.h
gst/farsight-utils/: Makefile.am  fsu-audio-sink.c  fsu-audio-sink.h  fsu-audio-source.c  fsu-audio-source.h  fsu-common.c  fsu-common.h  fsu-sink.c  fsu-sink.h  fsu-source.c  fsu-source.h  fsu-video-sink.c  fsu-video-sink.h  fsu-video-source.c  fsu-video-source.h  fsu.c  fsu.h
gst/funnel/: fs-funnel.c
